# tekore

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  async_test.py  contributing.rst  pyproject.toml  readme.md  readme.rst  readme_pypi.rst  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: CI.yml  build.yml  environment.yml  matrix.yml  scheduled.yml
docs/: advanced.rst  conf.py  examples.rst  extras.rst  index.rst  readme.rst  readme_content.rst  reference.rst  requirements.txt  substitutions.rst
docs/documents/: advanced_usage.rst  getting_started.rst
docs/examples/: albums_top_artist.rst  analyse_from_playlist.rst  artist_follower.rst  auth_server.rst  client_configurations.rst  discord_bot.rst  follow_by_search.rst  follow_category_playlist.rst  play_saved_album.rst  recommended_playlist.rst  related_artists_top_artist.rst  scripts.rst  tracks_new_release.rst
docs/examples/scripts/: albums_top_artist.rst  analyse_from_playlist.rst  follow_category_playlist.rst  scrape_playlists.rst
docs/readme/: contributing.rst  features.rst  getting_started.rst
docs/recipes/: _recipes.rst  auth_server.rst  client_configurations.rst
docs/reference/: auth.rst  client.rst  convert.rst  enum.rst  enumerate.rst  model.rst  scope.rst  sender.rst  serialise.rst  util.rst
docs/src/: 404.rst  advanced_usage.rst  auth_guide.rst  conf.py  examples.rst  getting_started.rst  index.rst  reference.rst  release_notes.rst  resources.rst
docs/src/examples/: artist_follower.rst  async_server.rst  auth_server.rst  client_configurations.rst  creating_scripts.rst  discord_bot.rst  fastapi-auth_server.rst  fastapi_auth_server.rst  flask-auth_server.rst  flask_auth_server.rst
docs/src/reference/: auth.rst  client.rst  config.rst  conversions.rst  errors.rst  models.rst  senders.rst
requirements/: checks  dev  docs  tests
scripts/: exec.bat  lint  test
spotipy/: __init__.py  _start.py  _verify.py  auth.py  convert.py  enumerate.py  scope.py  sender.py  serialise.py  util.py
spotipy/auth/: __init__.py  expiring.py  refreshing.py
spotipy/client/: __init__.py  _base.py  album.py  artist.py  base.py  browse.py  follow.py  full.py  library.py  player.py  playlist.py  track.py
spotipy/client/api/: __init__.py  artist.py  library.py  personalisation.py  search.py  user.py
spotipy/client/browse/: __init__.py  validate.py
spotipy/client/player/: __init__.py  view.py
spotipy/client/playlist/: __init__.py  modify.py  view.py
spotipy/model/: __init__.py  artist.py  audio_analysis.py  audio_features.py  base.py  category.py  context.py  currently_playing.py  device.py  disallows.py  error.py  local.py  member.py  paging.py  play_history.py  playlist.py  recommendations.py  track.py  user.py
spotipy/model/album/: __init__.py  base.py  full.py
spotipy/util/: __init__.py  config.py  credentials.py
src/tekore/: __init__.py  _config.py  _convert.py  model.py
src/tekore/_auth/: __init__.py  refreshing.py  scope.py  util.py
src/tekore/_client/: __init__.py  base.py  chunked.py  full.py  paging.py  process.py  short_link.py
src/tekore/_model/: __init__.py  artist.py  audio_analysis.py  audio_features.py  base.py  category.py  context.py  currently_playing.py  device.py  episode.py  error.py  local.py  member.py  paging.py  play_history.py  (+5 more)
tekore/: __init__.py  _config.py  _convert.py  _error.py  _sender.py  _start.py  convert.py  error.py  model.py  scope.py  sender.py  serialise.py
tekore/_auth/: __init__.py  expiring.py  refreshing.py  scope.py  token.py  util.py
tekore/_client/: base.py  chunked.py  full.py  paging.py  process.py
tekore/_model/: __init__.py  artist.py  audio_analysis.py  audio_features.py  base.py  category.py  context.py  currently_playing.py  device.py  episode.py  error.py  local.py  member.py  paging.py  play_history.py  playlist.py  recommendations.py  serialise.py  track.py  user.py
tekore/_sender/: __init__.py  base.py  client.py  concrete.py  error.py  extending.py
tekore/auth/: __init__.py  expiring.py  refreshing.py
tekore/client/: __init__.py  base.py  chunked.py  full.py  paging.py  process.py
tekore/model/: __init__.py  artist.py  audio_analysis.py  audio_features.py  base.py  category.py  context.py  currently_playing.py  device.py  episode.py  local.py  member.py  paging.py  play_history.py  playlist.py  recommendations.py  track.py  user.py
tekore/util/: __init__.py  config.py  credentials.py
tests/: __init__.py  _cred.py  _start.py  _util.py  _verify.py  auth.py  config.py  conftest.py  convert.py  enumerate.py  error.py  model.py  scope.py  sender.py  serialise.py  smoke.py  sp_enum.py  util.py
tests/auth/: expiring.py  refreshing.py  scope.py  util.py
tests/client/: _cred.py  _resources.py  album.py  artist.py  audiobook.py  base.py  browse.py  chapter.py  episode.py  follow.py  full.py  library.py  markets.py  misc.py  paging.py  personalisation.py  player.py  playlist.py  search.py  short_link.py  show.py  track.py  user.py
tests/sender/: __init__.py  base.py  caching.py  client.py  concrete.py  extend.py  options.py  retrying.py
(+133 files in other folders)
